fix: adjust alignemnt so all content has a 10px padding
refs #27

--- a/src/main.scss
+++ b/src/main.scss
@@ -158,7 +158,7 @@ body {
 .chart-container {
     margin: 5px;
     max-width: $content-max-width;
-    width: 100%;
+    width: calc(100% - 20px);
     align-self: center;
     flex: 1 0 auto;
 }
@@ -184,7 +184,7 @@ body {
 #leader-board {
     display: flex;
     justify-content: flex-start;
-    padding: 5px;
+    padding: 5px 10px;
 }
 
 .leader-board-table {
